--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             //transports: ['websocket', 'polling']
         //});
         const socket = io('https://text-share.project-kk.com', {
-            transports: ['polling']  // WebSocketからpollingに切り替え
+            transports: ['websocket','polling']  // WebSocketからpollingに切り替え
         });
 
         // テキストエリアの変更を検知し、サーバーに送信
