--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,12 @@
 
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <script>
-        //const socket = io({
-            //transports: ['websocket', 'polling']
-        //});
-        const socket = io('https://text-share.project-kk.com', {
-            transports: ['websocket','polling']  // WebSocketからpollingに切り替え
+        const socket = io({
+            transports: ['websocket', 'polling']
         });
+        //const socket = io('https://text-share.project-kk.com', {
+            //transports: ['websocket','polling']  // WebSocketからpollingに切り替え
+        //});
 
         // テキストエリアの変更を検知し、サーバーに送信
         var textarea = document.getElementById('syncTextarea');
