--- a/templates/test.html
+++ b/templates/test.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>WebSocket Test</title>
 </head>
+
 <body>
     <h2>WebSocket Test</h2>
     <button onclick="sendMessage()">Send Message</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script type="text/javascript">
-        const socket = io.connect();
+        const socket = io("https://text-share.project-kk.com", {
+            transports: ["polling"]
+        });
+
 
         socket.on("connect", () => {
             console.log("Connected to WebSocket server");
@@ -28,4 +33,5 @@
         }
     </script>
 </body>
+
 </html>
